--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark_gray"
+    android:padding="10dp"
     tools:context=".DetailsActivity">
 
     <ImageView
@@ -14,6 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         tools:srcCompat="@tools:sample/avatars" />
 
     <RatingBar
@@ -33,10 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ratingBar"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_margin="5dp"
         android:layout_toEndOf="@+id/ivPoster"
         android:textSize="24sp"
+        android:textColor="@color/light_gray"
         tools:text="Movie title" />
 
     <TextView
@@ -44,7 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivPoster"
-        android:layout_marginTop="5dp"
+        android:layout_margin="5dp"
         android:layout_alignParentStart="true"
+        android:textColor="@color/light_gray"
         tools:text="Movie overview" />
 </RelativeLayout>
