--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_gray"
-    android:padding="10dp"
+    android:padding="5dp"
     tools:context=".DetailsActivity">
 
     <ImageView
@@ -18,7 +18,18 @@
         android:layout_marginTop="0dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
+        android:onClick="trailerOnClick"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/playButton"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignStart="@+id/ivPoster"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="50dp"
+        android:onClick="trailerOnClick"
+        android:src="@drawable/play_overlay" />
 
     <RatingBar
         android:id="@+id/ratingBar"
