--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/dark_gray"
-    android:padding="10dp"
+    android:paddingHorizontal="5dp"
+    android:paddingVertical="10dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
