--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/dark_gray"
     android:padding="5dp"
     tools:context=".DetailsActivity">
 
     <ImageView
         android:id="@+id/ivPoster"
-        android:layout_width="350dp"
+        android:layout_width="256dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -23,44 +23,111 @@
 
     <ImageView
         android:id="@+id/playButton"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignStart="@+id/ivPoster"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="32dp"
         android:onClick="trailerOnClick"
         android:src="@drawable/play_overlay" />
+
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="-10dp"
+        android:layout_toEndOf="@+id/ivPoster"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="@color/light_gray_2"
+        tools:text="Movie title" />
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chipAdult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTitle"
+        app:chipMinHeight="20dp"
+        android:layout_marginStart="5dp"
+        android:layout_toEndOf="@+id/ivPoster"
+        app:chipBackgroundColor="@color/light_gray"
+        android:textColor="@color/dark_gray"
+        tools:text="PG" />
+
+    <TextView
+        android:id="@+id/tvReleaseDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTitle"
+        android:layout_marginStart="5dp"
+        android:paddingTop="12dp"
+        android:layout_toEndOf="@+id/chipAdult"
+        android:textSize="16sp"
+        android:textColor="@color/light_gray"
+        tools:text="Release date" />
 
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/tvTitle"
         android:layout_marginStart="5dp"
-        android:layout_toEndOf="@id/ivPoster"
+        android:layout_toEndOf="@id/tvReleaseDate"
+        android:scaleX="0.6"
+        android:scaleY="0.6"
+        android:transformPivotX="0dp"
+        android:transformPivotY="16dp"
         android:numStars="5"
         android:rating="0"
         android:stepSize="0.1"
         android:isIndicator="true" />
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvVoteAverage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ratingBar"
-        android:layout_margin="5dp"
-        android:layout_toEndOf="@+id/ivPoster"
-        android:textSize="24sp"
+        android:layout_below="@id/tvTitle"
+        android:layout_toEndOf="@id/ratingBar"
+        android:layout_marginStart="-90dp"
+        android:paddingTop="12dp"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="@color/light_gray_2"
+        tools:text="Vote count" />
+
+    <TextView
+        android:id="@+id/tvVoteInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvTitle"
+        android:layout_toEndOf="@id/tvVoteAverage"
+        android:paddingTop="12dp"
+        android:layout_marginStart="5dp"
+        android:textSize="16sp"
         android:textColor="@color/light_gray"
-        tools:text="Movie title" />
+        tools:text="Vote count" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/cgGenres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ratingBar"
+        android:layout_toEndOf="@id/ivPoster"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="-28dp"
+        android:layout_marginBottom="-10dp"
+        app:chipSpacingVertical="-20dp" />
 
     <TextView
         android:id="@+id/tvOverview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivPoster"
-        android:layout_margin="5dp"
+        android:layout_marginStart="5dp"
         android:layout_alignParentStart="true"
         android:textColor="@color/light_gray"
+        android:textSize="16sp"
         tools:text="Movie overview" />
 </RelativeLayout>
