--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -27,7 +27,8 @@
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@+id/ivPoster"
         android:textSize="24sp"
-        android:textColor="@color/light_gray"
+        android:textStyle="bold"
+        android:textColor="@color/light_gray_2"
         tools:text="Movie title" />
 
     <TextView
