--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="dark_gray">#221F1F</color>
-    <color name="light_gray">#F5F5F1</color>
+    <color name="dark_gray">#2A2A2A</color>
+    <color name="light_gray">#B9B9B9</color>
+    <color name="light_gray_2">#E1E1E1</color>
 </resources>
