--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="dark_gray">#2A2A2A</color>
     <color name="light_gray">#B9B9B9</color>
     <color name="light_gray_2">#E1E1E1</color>
+    <color name="metallic_yellow">#FDCC0D</color>
 </resources>
