--- a/app/src/main/res/layout/activity_genre_filter.xml
+++ b/app/src/main/res/layout/activity_genre_filter.xml
@@ -15,7 +15,7 @@
             android:id="@+id/genreList"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
     </ScrollView>
 
     <Button
@@ -23,24 +23,24 @@
         android:text="Update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         android:backgroundTint="@color/light_gray"
         android:textColor="@color/dark_gray"
-        android:onClick="updateOnClick" />
+        android:onClick="updateOnClick"/>
 
     <CheckBox
         android:id="@+id/cbAll"
-        android:onClick="cbAllOnClick"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@id/btnUpdate"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        android:textSize="22sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toStartOf="@id/btnUpdate"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="5dp"
         android:text="All"
-        android:textColor="@color/light_gray" />
+        android:textSize="22sp"
+        android:textColor="@color/light_gray"
+        android:onClick="cbAllOnClick"/>
 </RelativeLayout>
